--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -51,6 +51,8 @@ div {
 }
 
 .field_with_errors {
+  border-radius: 4px;
+  color: white;
   padding: 2px;
   background-color: red;
   display: table;
@@ -59,6 +61,7 @@ div {
 #error_explanation {
   width: 450px;
   border: 2px solid red;
+  border-radius: 4px;
   padding: 7px 7px 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
