--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Hello, Rails!</h1>
-<h1>Hello, Rails!</h1>
+<%= link_to 'My Blog', controller: 'articles' %>
+<br>
+<%= link_to 'New Article', new_article_path%>
+<br>
+<%= link_to 'First', welcome_show_path%>
