--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,14 @@
+<% if @post.errors.any? %>
+    <div class="alert alert-danger">
+      <h5><%= t('common.errors') %></h5>  <!-- t('путь в локале') - это локаль -->
+      <ul>
+        <% @post.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+<% end %>
+
 <%= form_for @post do |f| %>
     <div class="form-group">
       <%= f.label :title %>
@@ -13,8 +24,9 @@
       <%= f.label :body %>
       <%= f.text_area :body, class: 'form-control' %>
     </div>
+
     <div class="form-group">
-      <%= f.submit 'Save', class: 'btn btn-info' %>
-      <%= link_to 'Cancel', :back, class: 'btn btn-secondary' %>
+      <%= f.submit t('.submit', action: @post.new_record? ? 'Создать' : 'Изменить'), class: 'btn btn-info' %> <!-- Проверяем если это новая запись то 'Создать' иначе 'Изменить' -->
+      <%= link_to t('common.back'), :back, class: 'btn btn-secondary' %> <!-- t('путь в локале') - это локаль -->
     </div>
 <% end %>
