--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<h1> New Post </h1>
+<h1><%= t('.title') %> </h1> <!-- '.title' сокращённый путь вместо 'posts.new.title'  -->
 <div class="post-edit">
   <%= render 'form' %>
 </div>
