--- a/app/assets/stylesheets/posts.sass
+++ b/app/assets/stylesheets/posts.sass
@@ -8,7 +8,23 @@ article.post
   border-bottom: 1px solid lightseagreen
   h1, h2
     margin-bottom: 0
+    color: darkturquoise
   section.post-summary
     padding: .5em 0
   section.post-body
     padding-top: 1em
+  .img-show
+    display: block
+    margin-bottom: 2em
+  .thumb
+    float: left
+    margin-right: 1em
+.editor-body
+  min-height: 250px
+.editor-summary
+  min-height: 100px
+//.attachment
+//  padding-top: 2em
+//  padding-bottom: 2em
+//  .attachment__caption
+//    visibility: hidden
