--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1,8 +1,16 @@
-.main
-  padding-top: 1em
-
-.field_with_errors
-  label
-    color: #d01612
-  input, textarea
-    border-color: #d01612
+body
+  background-color: #EFEFEF
+  .main
+    padding-top: 1em
+    a
+      color: deepskyblue
+      text-decoration: none
+      &:hover
+        color: lightskyblue
+    h1, h2
+      color: darkturquoise
+  .field_with_errors
+    label
+      color: #d01612
+    input, textarea
+      border-color: #d01612
