--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -9,7 +9,7 @@
     </div>
 <% end %>
 
-<%= form_for @post do |f| %>
+<%= form_for @post, html: {multipart: true} do |f| %>
     <div class="form-group">
       <%= f.label :title %>
       <%= f.text_field :title, class: 'form-control' %>
@@ -17,16 +17,20 @@
 
     <div class="form-group">
       <%= f.label :summary %>
-      <%= f.text_area :summary, class: 'form-control' %>
+      <%= f.text_area :summary, class: 'editor-summary form-control' %>
     </div>
 
     <div class="form-group">
       <%= f.label :body %>
-      <%= f.text_area :body, class: 'form-control' %>
+      <%= f.trix_editor :body, class: 'editor-body body-editor' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.file_field :image %>
     </div>
 
     <div class="form-group">
       <%= f.submit t('.submit', action: @post.new_record? ? 'Создать' : 'Изменить'), class: 'btn btn-info' %> <!-- Проверяем если это новая запись то 'Создать' иначе 'Изменить' -->
-      <%= link_to t('common.back'), :back, class: 'btn btn-secondary' %> <!-- t('путь в локале') - это локаль -->
+      <%= link_to t('common.back'), :back, class: 'btn btn-light' %> <!-- t('путь в локале') - это локаль -->
     </div>
 <% end %>
