--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,6 +12,7 @@
     </small>
   </section>
   <section class="post-body">
-      <%= @post.body %>
+      <%= image_tag @post.image.url(:large), class: 'img-show' if @post.image? %>
+      <%= @post.body.html_safe %>
   </section>
 </article>
