--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,8 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item ">
-            <a class="nav-link" href="<%= posts_path %>"><%= t('header.all_item') %><span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="<%= posts_path %>"><%= t('header.all_item') %>
+              <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item ">
             <a class="nav-link" href="<%= new_post_path %>"><%= t('header.new_item') %></a>
@@ -58,14 +59,13 @@
         <%= yield %>
       </div>
       <div class="col-md-4">
-        <% tag_cloud(Tag.counts, %w{tag1 tag2 tag3 tag4 tag5}) do |tag, css_class|  %>
-          <%= link_to tag.name, tag_path(tag.name), class:css_class %>
+        <% tag_cloud(Tag.counts, %w{tag1 tag2 tag3 tag4 tag5}) do |tag, css_class| %>
+            <%= link_to tag.name, tag_path(tag.name), class: css_class %>
         <% end %>
 
       </div>
 
     </div>
-
 
 
   </div>
