--- a/app/assets/stylesheets/posts.sass
+++ b/app/assets/stylesheets/posts.sass
@@ -10,11 +10,19 @@ article.post
     color: darkturquoise
   section.post-summary
     padding: .5em 0
+    .img-thumbnail
+      background-color: transparent
+      padding: 0
   section.post-body
     padding-top: 1em
+
   .img-show
     display: block
     margin-bottom: 2em
+    border: solid
+      color: $comment-border
+      radius: 4px
+      width: 1px
   .thumb
     float: left
     margin-right: 1em
@@ -30,5 +38,5 @@ article.post
     .tag
       padding: 0 0.25em 0.15em 0.25em
       border-radius: 0.4em
-      background-color: $primary-color
+      background-color: $accent
       color: #EFEFEF
