--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="header-top">
-  <div class="container">
+  <div class="container top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="<%= posts_path %>"><%= t('header.brand') %></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,34 +41,34 @@
       </div>
     </nav>
   </div>
+</div>
 
-  <div class="container main">
-    <div class="row">
-      <div class="col-md-12">
-        <!--используются для цветового отображения уведомлений при сохранении, удалении, изменении-->
-        <% flash.each do |name, message| %>
-            <div class="alert alert-<%= name %>">
-              <%= message %>
-            </div>
-        <% end %>
-      </div>
+<div class="container main">
+  <div class="row">
+    <div class="col-md-12">
+      <!--используются для цветового отображения уведомлений при сохранении, удалении, изменении-->
+      <% flash.each do |name, message| %>
+          <div class="alert alert-<%= name %>">
+            <%= message %>
+          </div>
+      <% end %>
     </div>
+  </div>
 
-    <div class="row">
-      <div class="col-md-8">
-        <%= yield %>
-      </div>
-      <div class="col-md-4">
-        <% tag_cloud(Tag.counts, %w{tag1 tag2 tag3 tag4 tag5}) do |tag, css_class| %>
-            <%= link_to tag.name, tag_path(tag.name), class: css_class %>
-        <% end %>
-
-      </div>
+  <div class="row">
+    <div class="col-md-8">
+      <%= yield %>
+    </div>
+    <div class="col-md-4">
+      <% tag_cloud(Tag.counts, %w{tag1 tag2 tag3 tag4 tag5}) do |tag, css_class| %>
+          <%= link_to tag.name, tag_path(tag.name), class: css_class %>
+      <% end %>
 
     </div>
-
 
   </div>
+
+
 </div>
 
 
