--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -1,33 +1,46 @@
-<div class="comment">
-  <h2>Comments</h2>
-  <div class="comment-view">
-  <% @post.comments.each do |comment| %>
-      <p>
-        <strong>Commenter:</strong>
-        <%= comment.commenter %>
-      </p>
+<div class="comment" data-post_id="<%= @post.id %>">
+  <div id="comment-header">
+    <h2>Comments</h2>
+    <p> <%= puts @post.taggings %></p>
+  </div>
 
-      <p>
-        <strong>Comment:</strong>
-        <%= comment.body %>
-      </p>
+  <% @post.comments.each do |comment| %>
+      <div id="commentBlock" class="comment-view" data-comment_id="<%= comment.id %>">
+        <div class="form-group">
+          Commenter:
+          <%= comment.commenter %>
+        </div>
+
+        <div class="form-group" >
+          Comment № <%= comment.id %>:
+          <%= comment.body %>
+          <span class="deleteAction">Delete</span>
+         </div>
+
+        <div class="comment-edit">
+          <%= link_to 'Add String', '/edit-comment', class: 'edit_comment', remote: true %>
+          <!-- то же самое что и  <a class="edit_comment" href="#" data-remote="true">Add String</a> -->
+        </div>
+      </div>
   <% end %>
+
+  <div id="comment-header">
+    <h2>Add a comment</h2>
   </div>
   <div class="comment-add">
-  <h2>Add a comment:</h2>
-  <%= form_with(model: [@post, @post.comments.build], local: true) do |form| %>
-      <p>
-        <%= form.label :commenter %><br>
-        <%= form.text_field :commenter %>
-      </p>
-      <p>
-        <%= form.label :body %><br>
-        <%= form.text_area :body %>
-      </p>
-      <p>
-        <%= form.submit %>
-      </p>
-  <% end %>
+    <%= form_with(model: [@post, @post.comments.build], local: true) do |form| %>
+        <div class="form-group">
+          <%= form.label :commenter %><br>
+          <%= form.text_field :commenter, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= form.label :body %><br>
+          <%= form.text_area :body, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= form.submit class: 'btn btn-info' %>
+        </div>
+    <% end %>
   </div>
 </div>
 
