--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -29,3 +29,16 @@ body
     background-color: $primary-shade !important
   .products_list
     background-color: #B00100
+  .pagination
+    ul
+      display: inherit
+      list-style-type: none
+      padding-left: 0px
+      a
+        background-color: $accent
+        color: white
+        text-decoration: none
+      .page-item.active .page-link
+        background-color: $accent-dark
+        border-color: white
+
