--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,6 +8,8 @@
       <%= link_to 'Edit', edit_post_path(post) %>
       |
       <%= link_to 'Delete', post_path(post), method: :delete, data: { confirm: 'Are you sure?'} %>
+      <%= post.created_at.to_date.strftime("%m/%d/%Y") %>
+      <%= commenter = Post.find_by_sql("SELECT id FROM comments WHERE id = 17") %>
     </small>
   </section>
   <section class="post-summary clearfix">
