--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,6 @@
   <h1><%= t('.title') %></h1>
   <%= render @posts %>
+  <%= will_paginate @posts, renderer: 'BootstrapPaginationHelper::LinkRenderer' %>
 
 
 
